Fix position of header announcement on mobile when there are long header links

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -558,6 +558,7 @@ hr {
     .header-right {
         margin-top: .5rem;
         margin-right: auto;
+        text-align: center;
     }
 
     .announcement {
